// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CheckBox > renders correctly 1`] = `
<div>
  <input
    class="checkbox h-5 w-5 cursor-pointer appearance-none rounded-full border bg-black px-2 outline-none checked:border-transparent checked:bg-green-500 focus:border-inherit focus:outline-none"
    type="checkbox"
  />
</div>
`;

exports[`CheckBox > renders with additional props 1`] = `
<div>
  <input
    aria-label="checkbox"
    checked=""
    class="checkbox h-5 w-5 cursor-pointer appearance-none rounded-full border bg-black px-2 outline-none checked:border-transparent checked:bg-green-500 focus:border-inherit focus:outline-none"
    disabled=""
    type="checkbox"
  />
</div>
`;

exports[`CheckBox > renders with custom className 1`] = `
<div>
  <input
    class="checkbox cursor-pointer appearance-none rounded-full border bg-black outline-none checked:border-transparent focus:border-inherit focus:outline-none size-10 px-4 checked:bg-pink-500"
    type="checkbox"
  />
</div>
`;
